# backlog-ui

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
app/: client.py  config.py  main.py  routes.py
app/static/: style.css
app/templates/: base.html  list.html
app/templates/fragments/: counts.html  drawer.html  row.html  rows.html  toast.html
app/tests/: test_client.py  test_config.py  test_render.py
argocd/: application.yaml
k8s/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  sealedsecret-platform.yaml  service.yaml
